# TreinamentoESP32_Medidor

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
Apresentação-TEX/: Sobre_nos.html  componentes.html  compre.html  conclusao.html  dados.html  github.html  index.html  introducao.html  metodologia.html  style.css
Apresentação-TEX/img/: teste1.jfif  teste2.jfif  teste3.jfif  teste4.jfif
data/: index.html
main/: CI2C.cpp  CMakeLists.txt  cSMP3011.cpp  displaySSD1306.c  displaySSD1306.h  http_server.cpp  http_server.h  idf_component.yml  logo.c  main.c  main.cpp  wifi_http.cpp  wifi_http.h
